--- a/6.artifactory-aws-install/artifactory-values.yaml
+++ b/6.artifactory-aws-install/artifactory-values.yaml
@@ -37,7 +37,7 @@ nginx:
     stdout: true
     level: warn
 
-  ## Run on nodes marked with the label "group=artifactory"
+  ## Run on nodes marked with the label "group=nginx"
   nodeSelector:
     group: "nginx"
 
