Add example of jfrog-platform (Artifactory and Xray) install

--- a/7.jfrog-platform-aws-install/jfrog-values.yaml
+++ b/7.jfrog-platform-aws-install/jfrog-values.yaml
@@ -75,8 +75,9 @@ xray:
       enabled: false
 
   ## Run on nodes marked with the label "group=xray"
-  nodeSelector:
-    group: "xray"
+  global:
+    nodeSelector:
+      group: "xray"
 
 # RabbitMQ is required for Xray
 rabbitmq:
