Support sizings for artifactory (#6)
Add the ability to set sizing for AWS and Artifactory

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ terraform.tfstate*
 *.tfplan
 *.tfstate.backup
 *.tfstate.backup.*
+artifactory-license.yaml
+artifactory-db.yaml
+artifactory-custom.yaml
