Add the enableSignedUrlRedirect key to allow use of the S3 signed URL by Artifactory

--- a/6.artifactory-aws-install/artifactory-values.yaml
+++ b/6.artifactory-aws-install/artifactory-values.yaml
@@ -23,6 +23,10 @@ artifactory:
       path: artifactory/filestore
       useInstanceCredentials: true
 
+      ## With an Artifactory Enterprise license, the following settings will enable signed URL support for S3
+      enableSignedUrlRedirect: true
+      signedUrlExpirySeconds: 60
+
   ## Require multiple Artifactory pods to run on separate nodes
   podAntiAffinity:
     type: "hard"
